<resources>
    <string name="app_name">Brand Audit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select">Choose a Beach</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="headerImage">Header Image</string>
    <string name="ImageBody">BodyImage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="pesanan">Order</string>
    <string name="riwayat">History</string>
    <string name="transaksi">Transaction</string>
    <string name="filter">filter</string>
    <string name="kartuku">Kartuku</string>
    <string name="logout">Logout</string>
    <string name="policy">Policy</string>
    <string name="question_and_answer">Question and Answer</string>
    <string name="syarat_dan_ketentuan">Terms and Condition</string>
    <string name="ubah_security_code">Change Security Code</string>
    <string name="ubah_profil">Change Profile</string>
    <string name="nomerHP">083825287989</string>
    <string name="syarif">Irwansyah Tampan</string>
    <string name="nama">Name</string>
    <string name="passwordLama">Old Password</string>
    <string name="passwordBaru">New Password</string>
    <string name="Pertanyaan">Question</string>
    <string name="Jawaban">Answer</string>
    <string name="SecurityCodeLama">Old Security Code</string>
    <string name="SecurityCodeBaru">New Security Code</string>
    <string-array name="judul">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="gambar">
        <item>gambar</item>
        <item>gambar</item>
        <item>gambar</item>
    </string-array>
    <string name="sizeInputText">8dp</string>
    <string name="sizetext">12sp</string>
    <string name="text">Disebuah hutan belantara yang luas, tinggal beraneka ragam satwa. Salah satunya seekor kancil. Kancil yang satu ini dikenal memiliki kecerdikan yang luar biasa. Tak hanya cerdik, kancil pun dikenal sebagai satwa yang ramah akan sesama.Disebuah hutan belantara yang luas, tinggal beraneka ragam satwa. Salah satunya seekor kancil. Kancil yang satu ini dikenal memiliki kecerdikan yang luar biasa. Tak hanya cerdik, kancil pun dikenal sebagai satwa yang ramah akan sesama.Disebuah hutan belantara yang luas, tinggal beraneka ragam satwa. Salah satunya seekor kancil. Kancil yang satu ini dikenal memiliki kecerdikan yang luar biasa. Tak hanya cerdik, kancil pun dikenal sebagai satwa yang ramah akan sesama.Disebuah hutan belantara yang luas, tinggal beraneka ragam satwa. Salah satunya seekor kancil. Kancil yang satu ini dikenal memiliki kecerdikan yang luar biasa. Tak hanya cerdik, kancil pun dikenal sebagai satwa yang ramah akan sesama.Disebuah hutan belantara yang luas, tinggal beraneka ragam satwa. Salah satunya seekor kancil. Kancil yang satu ini dikenal memiliki kecerdikan yang luar biasa. Tak hanya cerdik, kancil pun dikenal sebagai satwa yang ramah akan sesama.Disebuah hutan belantara yang luas, tinggal beraneka ragam satwa. Salah satunya seekor kancil. Kancil yang satu ini dikenal memiliki kecerdikan yang luar biasa. Tak hanya cerdik, kancil pun dikenal sebagai satwa yang ramah akan sesama.</string>
    <!--    <string name="ek_img_content">ExportKit Image</string>-->
    <string name="email_string">Email</string>
    <string name="kata_sandi_ek2_string">Password</string>
    <string name="lupa_kata_sandi__string">Forget Password?</string>
    <string name="sign_in_ek2_string">Sign In</string>
    <string name="login_string">Login </string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="ddrocare_gmail_com_string">DDrocare@gmail.com</string>
    <string name="_________________________string">***********************</string>
    <string name="register_string">Register</string>
    <string name="registrasi_string">Register</string>
    <string name="welcome">Welcome</string>
    <string name="have_account">Already Have Account?</string>
    <string name="product_name">Product Name</string>
    <string name="our_activity">Our Activity</string>
    <string name="desc_activity">Synergize with us to become local heroes for a more beautiful environment</string>
</resources>